@@ -1,5 +1,6 @@
 # Clarus Proxy
 [![Build Status](https://travis-ci.org/clarus-proxy/proxy.svg?branch=master)](https://travis-ci.org/clarus-proxy/proxy)
+
 The proxy component
 
 ## Pre Requisites
@@ -19,14 +20,14 @@ cd dataoperations-api
 git checkout develop
 mvn install
 cd -
-````
+```
 
 ```bash
 git clone https://github.com/clarus-proxy/security-policy-model.git
 cd security-policy-model
 mvn install
 cd -
-````
+```
 
 ```bash
 git clone https://github.com/clarus-proxy/JSqlParser.git
@@ -34,7 +35,7 @@ cd JSqlParser
 git checkout develop # In order to get the CLARUS version which was Patched
 mvn install
 cd -
-````
+```
 
 ### Install and compile the Data Operation Modules
 
@@ -44,21 +45,21 @@ cd anonymization-module/
 git checkout develop
 mvn install
 cd -
-````
+```
 
 ```bash
 git clone https://github.com/clarus-proxy/paillier.git
 cd paillier
 mvn install
 cd -
-````
+```
 
 ```bash
 git clone https://github.com/clarus-proxy/homomorphicencryption-module.git
 cd homomorphicencryption-module
 mvn install
 cd -
-````
+```
 
 ```bash
 git clone https://github.com/clarus-proxy/encryption-module.git
@@ -66,7 +67,7 @@ cd encryption-module
 git checkout develop
 mvn install
 cd -
-````
+```
 
 ```bash
 git clone https://github.com/clarus-proxy/splitting-module.git
@@ -74,7 +75,7 @@ cd splitting-module
 git checkout develop
 mvn install
 cd -
-````
+```
 
 ```bash
 git clone https://github.com/clarus-proxy/searchableencryption-module.git
@@ -82,13 +83,31 @@ cd searchableencryption-module/SE_module
 git checkout develop
 mvn install
 cd -
-````
+```
 
 ### Compile & Build the Proxy
+
 ```bash
 git clone https://github.com/clarus-proxy/proxy.git
 cd proxy
 git checkout develop
 mvn install
-cd -
-````
+```
+
+### Get a test policy and launch the proxy !
+
+__Linux systems__
+
+```bash
+cd install
+cp ../main/src/test/resources/patient_anonymisation.xml test.xml
+java -Djava.ext.dirs=./ext-libs/ -jar ./libs/proxy-main-1.2-SNAPSHOT.jar -sp test.xml 127.0.0.1
+```
+
+__Windows systems__
+
+```batch
+cd install
+copy ..\main\src\test\resources\patient_anonymisation.xml test.xml
+java -Djava.ext.dirs=.\ext-libs\ -jar .\libs\proxy-main-1.2-SNAPSHOT.jar -sp test.xml 127.0.0.1
+```
